# mediaorganiser

./: .gitignore  README.md
basics/: CMakeLists.txt  add.cpp  add.hpp  main.cpp
sdl/: main.c
src/: CMakeLists.txt  main.cpp  mainqt.cpp  mediaorganiser  mediaorganiser.cpp  mediaorganiser.hpp  mediaorganiserqt
